# owl

./: .gitignore  LICENSE  README.md  pyproject.toml
src/owl_cli/: __init__.py  agents.py  cli.py  constants.py  core.py  errors.py  memory.py  message_inputs.py  messages.py  output.py  perch.py  spells.py  store.py  utils.py  watchers.py
src/owl_cli/builtin_spells/: SKILL.md
src/owl_cli/builtin_spells/owl/: SKILL.md
src/owl_cli/builtin_spells/owl/agents/: SKILL.md
src/owl_cli/builtin_spells/owl/development/: SKILL.md
src/owl_cli/builtin_spells/owl/memory/: SKILL.md
src/owl_cli/builtin_spells/owl/messages/: SKILL.md
src/owl_cli/builtin_spells/owl/perch/: SKILL.md
src/owl_cli/builtin_spells/owl/spell-creator/: SKILL.md
src/owl_cli/builtin_spells/owl/spells/: SKILL.md
src/owl_cli/builtin_spells/spell-creator/: SKILL.md
src/owl_spells/: __init__.py
src/owl_spells/owl/: SKILL.md
src/owl_spells/owl/agents/: SKILL.md
src/owl_spells/owl/development/: SKILL.md
src/owl_spells/owl/memory/: SKILL.md
src/owl_spells/owl/messages/: SKILL.md
src/owl_spells/owl/spells/: SKILL.md
src/owl_spells/spell-creator/: SKILL.md
tests/: conftest.py  helpers.py  test_agents.py  test_cli.py  test_memory.py  test_messages.py  test_perch.py  test_resilience.py  test_spells.py  test_store.py  test_utils.py  test_watchers.py
