[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "owl-orchestrator"
version = "0.1.0"
description = "Local-first CLI primitives for agent orchestration."
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[project.scripts]
owl = "owl_cli.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
owl_cli = ["builtin_spells/**/SKILL.md"]
