[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "owl-orchestrator"
version = "0.1.0"
description = "Local-first CLI primitives for agent orchestration."
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
dependencies = []

[project.scripts]
owl = "owl_cli.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
owl_spells = ["**/SKILL.md"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.isort]
profile = "black"
line_length = 100
known_first_party = ["owl_cli", "owl_spells"]

[dependency-groups]
dev = [
    "black>=26.5.0",
    "isort>=8.0.1",
    "mypy>=2.1.0",
    "pytest>=8",
    "pyyaml>=6.0.3",
    "types-pyyaml>=6.0.12.20260510",
]
